--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <p>calc</p>
     <div class="theme-button">
         <p>THEME</p>
-        <button><div class="circle"></div></button>
+        <input type="number" min="1" max="3" value="1" >
+        <div class="circle"></div> 
+      
       </div>
 </div>
     
@@ -36,19 +38,19 @@
     <button class="number">7</button>
     <button class="number">8</button>
     <button class="number">9</button>
-    <button id="delete">DEL</button>
+    <button id="delete" >DEL</button>
     <button class="number">4</button>
     <button class="number">5</button>
     <button class="number">6</button>
-    <button id="plus">+</button>
+    <button id="plus" class="math">+</button>
     <button class="number">1</button>
     <button class="number">2</button>
     <button class="number">3</button>
-    <button id="minus">-</button>
-    <button id="point">.</button>
+    <button id="minus" class="math">-</button>
+    <button id="point" class="math">.</button>
     <button class="number">0</button>
-    <button id="division">/</button>
-    <button id="multiplication">x</button>
+    <button id="division" class="math">/</button>
+    <button id="multiplication" class="math">x</button>
     <button id="reset">RESET</button>
     <button id="equal">=</button>
   </div>
