--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
     <button class="number">7</button>
     <button class="number">8</button>
     <button class="number">9</button>
-    <button id="delete" >DEL</button>
+    <button class="delete">DEL</button>
     <button class="number">4</button>
     <button class="number">5</button>
     <button class="number">6</button>
-    <button id="plus" class="math">+</button>
+    <button class="arithmeticOperations">+</button>
     <button class="number">1</button>
     <button class="number">2</button>
     <button class="number">3</button>
-    <button id="minus" class="math">-</button>
-    <button id="point" class="math">.</button>
+    <button class="arithmeticOperations">-</button>
+    <button class="arithmeticOperations">.</button>
     <button class="number">0</button>
-    <button id="division" class="math">/</button>
-    <button id="multiplication" class="math">x</button>
-    <button id="reset">RESET</button>
-    <button id="equal">=</button>
+    <button class="arithmeticOperations">/</button>
+    <button class="arithmeticOperations">x</button>
+    <button class="reset">RESET</button>
+    <button class="equal">=</button>
   </div>
 
 </div>
