--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 
   <div class="result">
     <div class="current-actions">0-5</div>
-    <div class="final-result">00,00</div>
-   
+    <div class="final-result"></div>
   </div>
 
   <div class="buttons">
@@ -52,7 +51,7 @@
     <button class="number">2</button>
     <button class="number">3</button>
     <button class="arithmeticOperations">-</button>
-    <button class="arithmeticOperations">.</button>
+    <button class="number">.</button>
     <button class="number">0</button>
     <button class="arithmeticOperations">/</button>
     <button class="arithmeticOperations">x</button>
