--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
   
 
   <div class="result">
-    <div class="current-actions">0-5</div>
-    <div class="final-result"></div>
+    <div class="current-actions">0</div>
+    <div class="final-result">0</div>
   </div>
 
   <div class="buttons">
